Delete node done

--- a/Astghik_Saghyan/Homeworks/HTML/01_18.06.18/deleteNode/index.html
+++ b/Astghik_Saghyan/Homeworks/HTML/01_18.06.18/deleteNode/index.html
@@ -2,36 +2,38 @@
 <html>
     <head>
         <title>Astghik_CreatNode</title>
+        <link rel="stylesheet" href="./style.css">
         <script src="./script.js"></script>
         <meta name="keywords" content="HTML,CSS">
     </head>
     <body>
-        <div>
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>5</span>
+        <div id="spans">
+            <span id="1">1</span>
+            <span id="2">2</span>
+            <span id="3">3</span>
+            <span id="4">4</span>
+            <span id="5">5</span>
             <br>
-            <span>6</span>
-            <span>7</span>
-            <span>8</span>
-            <span>9</span>
-            <span>10</span>
-            <select onchange="delElement()">
+            <span id="6">6</span>
+            <span id="7">7</span>
+            <span id="8">8</span>
+            <span id="9">9</span>
+            <span id="10">10</span>
+            <br>
+            <select id="number">
                 <option value="1">1</option>
-                <option value="2">1</option>
-                <option value="3">1</option>
-                <option value="4">1</option>
-                <option value="5">1</option>
-                <option value="6">1</option>
-                <option value="7">1</option>
-                <option value="8">1</option>
-                <option value="9">1</option>
-                <option value="10">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
             </select>
-        </div>
-        <div id="newElem">
+            <br>
+            <button onclick="delElement()">Press me!</button>
         </div>
     </body>
 </html>
