Loge in updated

--- a/Astghik_Saghyan/Homeworks/Web/HTML_CSS/02_19.06.18/LogeIn/index.html
+++ b/Astghik_Saghyan/Homeworks/Web/HTML_CSS/02_19.06.18/LogeIn/index.html
@@ -10,9 +10,9 @@
             <form>
                 <fieldset>
                     <label for="logein">Loge In:</label>
-                    <input class="inp" type="text" name="login" value="" placeholder="Loge In"><br>
+                    <input class="inp" type="text" name="login" placeholder="Loge In"><br>
                     <label for="password">Password:</label>
-                    <input class="inp" type="password" name="gender" id="" value="" placeholder="Password"><br>
+                    <input class="inp" type="password" name="password" placeholder="Password"><br>
                     <input type="submit" value="Submit">
                 </fieldset>
             </form>
