--- a/Anush_Ghazaryan/Homeworks/HTML/2_19.06/login.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/2_19.06/login.html
@@ -2,7 +2,7 @@
 <html>
     <body>
 	<label>
-	    <form action="8.8.8.8">
+	    <form action="somewhere.com">
 
                 <h1><span style = "color: blue;font-weight:bold">Login Form</h1>
 	        <head><div>Username</div></head>
