--- a/Elya_Karapetyan/Homeworks/HTML/2_19-06/loginPage/login.html
+++ b/Elya_Karapetyan/Homeworks/HTML/2_19-06/loginPage/login.html
@@ -5,13 +5,22 @@
     <head>
     <body>
         <form class="loginPart">
-        <h2>Login</h2>
+        <h1>Login</h1>
             <div>
-                <label for="login"><b>Login<b></label>
-                <input type="text" class="pos">
-                <br>
-                <label for="password"><b>Password<b></label>
-                <input type="password" class="pos">
+                <div class="stringLoginPass">
+                    <label for="login"><b>Login<b></label>
+                </div>
+                <div class="loginPass">
+                    <input type="text" class="pos">
+                </div>
+                <br><br>
+                <div class="stringLoginPass">
+                    <label for="password"><b>Password<b></label>
+                </div>
+                <div class="loginPass">
+                    <input type="password" class="pos">
+                </div>
+                <button class="btn">Login</button>
             <div>
         </form>
     </body>
