Update select task for 18-06

--- a/Elya_Karapetyan/Homeworks/HTML/1_18-06/select.html
+++ b/Elya_Karapetyan/Homeworks/HTML/1_18-06/select.html
@@ -19,9 +19,9 @@
         <br>
         <select id="selectId" >
             <option value="div">div</option>
-            <option value="div">p</option>
-            <option value="div">h3</option>
-            <option value="div">h1</option>
+            <option value="p">p</option>
+            <option value="h3">h3</option>
+            <option value="h1">h1</option>
         </select>
         <br><br>
         <button onclick="getValueOfTextarea()">Press</button>
