The selected option is deleted

--- a/Astghik_Saghyan/Homeworks/Web/HTML_CSS/01_18.06.18/deleteNode/index.html
+++ b/Astghik_Saghyan/Homeworks/Web/HTML_CSS/01_18.06.18/deleteNode/index.html
@@ -21,16 +21,16 @@
             <span id="10">10</span>
             <br>
             <select id="number">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
+                <option value="1" id="1o">1</option>
+                <option value="2" id="2o">2</option>
+                <option value="3" id="3o">3</option>
+                <option value="4" id="4o">4</option>
+                <option value="5" id="5o">5</option>
+                <option value="6" id="6o">6</option>
+                <option value="7" id="7o">7</option>
+                <option value="8" id="8o">8</option>
+                <option value="9" id="9o">9</option>
+                <option value="10" id="10o">10</option>
             </select>
             <br>
             <button onclick="delElement()">Press me!</button>
