--- a/Vahan_Hovhannisyan/Homeworks/HTML_CSS/2_19.06.2018/Blocks.html
+++ b/Vahan_Hovhannisyan/Homeworks/HTML_CSS/2_19.06.2018/Blocks.html
@@ -27,6 +27,7 @@ function hide() {
 
 function show() {
     var form = document.getElementById("radio");
+console.log(form);
     var id = getBlockId(radio);
     var div = document.getElementById(id);
     if (div.style.visibility == "visible") {
