--- a/Gevorg_Antonyan/Homeworks/Web/20.06/main.html
+++ b/Gevorg_Antonyan/Homeworks/Web/20.06/main.html
@@ -108,6 +108,8 @@
             background-color: green;
             height: 5%;
             width: 20%;
+            position: absolute;
+            margin-left: 500px;
             border: none;
             outline: none;
             border-radius: 5px;
@@ -121,13 +123,14 @@
             font-size: 20px;           
         }
         #pos1 {
-            padding: 50;
+            padding: 100;
+            left: 30%;
         }
         #pos2 {
-            padding: 50;
+            padding: 100;
         }
         #pos3 {
-            padding: 50;
+            padding: 100;
         }
     </style>
     
@@ -154,7 +157,7 @@
         <br>
         <br>
         <br>
-        <h2>That's right, this theme is absolutely for free for any <br> personal or commercial project<h2>
+        <h2>That's right, this theme is absolutely for free for any <br> personal or commercial project</h2>
         <br>
         <br>
         <br>
