updated homework - create web page

--- a/Stepan_Chaparyan/Homeworks/html/20.06.18/index.html
+++ b/Stepan_Chaparyan/Homeworks/html/20.06.18/index.html
@@ -20,13 +20,26 @@
 <h2>Free Minimalistic HTML Templete</h2>
 <p>That's right, this theme is absolutely for free for any personal or commercial project</p>
 
-<button>DOWNLOAD</button>
+<button id="download">DOWNLOAD</button>
 
 <div id="textDiv">
-    <div id="text1">Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</div>
-    <div id="text2">Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</div>
-    <div id="text3">Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</div>
+    <div id="text1">
+         <span id="titleSpan">Hey, Is tis responsive</span><br><br>
+         <span>Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</span></div>
+    <div id="text2">
+        <span id="titleSpan">Hey, Is tis responsive</span><br><br>
+        <span>Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</span></div>
+    <div id="text3">
+	<span id="titleSpan">Hey, Is tis responsive</span><br><br>
+        <span>Lorem Ipsum: usage. Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content</span></div>
 </div>
+<footer>
+<div id="foot">
+<span id="textFooter">Dont miss <span id="WP">WordPress version</span>  of this page</span>
+<button id="btnFooter">Grab It Here</button>
+</div>
+</footer>
+
 
 </body>
 </html>
