--- a/Mikayel_Gabrielyan/Homeworks/HTML/3_20.06/index.html
+++ b/Mikayel_Gabrielyan/Homeworks/HTML/3_20.06/index.html
@@ -5,45 +5,34 @@
     </head>
     <body>
         <div id="header">
-            <div id="header_in">
-                <h2><b>NINA THEME<b><h2>
-                <div id="menu">
-                    <ul>
-                        <li><a href="home.html" class="active">HOME</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="ourwork.html">OUR WORK</a></li>
-                        <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
-                </div>
+            <div id="menu">
+                <ul>
+                    <li><a href="home.html" class="active">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="ourwork.html">OUR WORK</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
             </div>
-        <div id="main_part">
-            <div id="main_part_text">
-                <h2>Free minimalistic HTML template</h2>
-                <p>"That's right, this template is absolutely for free any personal or commercial project"</p>
+            <div id="main_part">
+                <br><br><br>
+                <h2 id="text1">Free minimalistic HTML template</h2>
+                <p id="text2">That's right, this template is absolutely for free any personal or commercial project</p>
+                <button>DOWNLOAD</button>
             </div>
-            <div class="button_main">
-                <div class="pxline"></div>
-                <a href="download.html" class="button_dark">DOWNLOAD</a>
-            </div>
-        </div>
         </div>
         <div id="content">
-            <div class="thirds">
+            <div id="text_block1">
                 <h3>Hey, is it responsive?<h3>
-                <p>"No. Sorry, it's not(yet). Stay tuned for future updates! There should also be WP version soon, which will totally be responsive."</p>
+                <p>No. Sorry, it's not(yet). Stay tuned for future updates! There should also be WP version soon, which will totally be responsive.</p>
             </div>
-            <div class="thirds">
+            <div id="text_block2">
                 <h3>Looking for PSD?<h3>
-                <p>"If you want to play with the design and make some more-drastic changes,you might need the PSD files. You can purchase them "</p>
-                <a href="here.html">here</a>
-                "."
+                <p>If you want to play with the design and make some more-drastic changes,you might need the PSD files. You can purchase them <a href="here.html">here.</a></p>
             </div>
-            <div class="thirds">
+            <div id="text_block3">
                 <h3>How about WordPress?<h3>
-                <p>"Working on it! It probably won't be for free, but for about $20. If you want anything specific in the WP version, "</p>
-                <a href="contactme.html">contact me</a>
-                "!"
+                <p>Working on it! It probably won't be for free, but for about $20. If you want anything specific in the WP version, <a href="contactme.html">contact me!</a></p>
             </div>
         </div>
     </body>
