--- a/Meliq_Melqonyan/Homeworks/html_css_js/3.20.06.18/index.html
+++ b/Meliq_Melqonyan/Homeworks/html_css_js/3.20.06.18/index.html
@@ -23,8 +23,22 @@
                     <h2 class="h">That`s right,this theme is absolutely for free for any personal or commerical project</h2>
                     <button class="but">DOWNLOAD</button>
                 </div>
+
                 
             </div>
         </div>
+	<div>
+		<div class="textFotter">
+			<div class="txt"><h3>Hey, is it responsive</h3> 
+			<span>No sorry it is no yet. Stay turned for future uploads. There shuld also be WP version soon wich will totally also be responsive.</span>	
+</div>
+<div class="txt"><h3>PSD Files included</h3><span>Its true PSD files for every single are inside the main file> there are also some great elements like banners, pics of my cat, etc.</span></div>
+<div class="txt"><h3>How about WordPress?</h3><span>Working on it?But hey.It probably wont be free, but for about $5.If you want anythingspecific in the WP version </span> </div>
+</div >
+<div class="govazd">
+<span>Don't miss the</span><span><b>WordPress version </b></span><span>   of this theme           </span>
+<button id="button">GRAB IT HERE</button>
+</div>
+	</div>
     </body>
 </html>
