--- a/Arman_Avdalyan/Homeworks/Web/HTML_CSS/3_20.06/index.html
+++ b/Arman_Avdalyan/Homeworks/Web/HTML_CSS/3_20.06/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <header>
-            <button id="btnStart"> <span style="color: black; font-weight: bold" disabled> NINA </span> THEME</button>
+            <button id="btnStart" disabled> <span style="color: black; font-weight: bold"> NINA </span> THEME</button>
             <button class="btn" style="background-color: transparent"> HOME </button>
             <button class="btn"> ABOUT </button>
             <button class="btn"> OUR WORK </button>
@@ -17,7 +17,7 @@
         <div id="text">
             <span id="span1"> Free Minimalistic HTML Template </span><br><br>
             <span id="span2"> That’s right, this theme is absolutely for free for any personal or commercial project </span><br>
-            <button class="yellowBtn"> DOWNLOAD </button>
+            <button class="yellowBtn" id="btnDownload"> DOWNLOAD </button>
         </div>
         <div id="divBottom">
             <div id="firstCol">
@@ -35,10 +35,10 @@
                 <span class="spanText"> Working on it! It probably won’t be for free, but for about $20. 
                     If you want anything specific in the WP version, contact me! </span>
             </div>
-            <footer>
-                <span id="footerText"> Don't miss the <span id="whiteFooterText"> WordPress version</span> of this theme! </span>
-                <button class="yellowBtn" id="footerBtn"> GRAB IT HERE </button>
-            </footer>
         </div>
+        <footer>
+            <span id="footerText"> Don't miss the <span id="whiteFooterText"> WordPress version</span> of this theme! </span>
+            <button class="yellowBtn" id="footerBtn"> GRAB IT HERE </button>
+        </footer>
     </body>
-<html>
+</html>
