Update task for 20-06

--- a/Elya_Karapetyan/Homeworks/HTML/3_19-06/webPage/index.html
+++ b/Elya_Karapetyan/Homeworks/HTML/3_19-06/webPage/index.html
@@ -8,14 +8,12 @@
     <body>
         <div class="imageDiv">
             <header>
-               <ul>
-                   <li><a href="#nina" id="ninaId"><br><b>NINA</b> THEME</a></li>
-                   <li><a href="#home" id="menuId" class="active"><br>HOME</a></li>
-                   <li><a href="#about" id="menuId"><br>ABOUT</a></li>
-                   <li><a href="#our_work" id="menuId"><br>OUR WORK</a></li>
-                   <li><a href="#blog" id="menuId"><br>BLOG</a></li>
-                   <li><a href="#contact" id="menuId"><br>CONTACT</a></li>
-               </ul>
+                   <li href="#nina" id="ninaId"><br><b>NINA</b> THEME</li>
+                   <li href="#home" id="menuId" class="active"><br>HOME</li>
+                   <li href="#about" id="menuId"><br>ABOUT</li>
+                   <li href="#our_work" id="menuId"><br>OUR WORK</li>
+                   <li href="#blog" id="menuId"><br>BLOG</li>
+                   <li href="#contact" id="menuId"><br>CONTACT</li>
             </header>
         </div>
         <div class="imgText">
@@ -23,22 +21,22 @@
                 <h3>That's right, this template is absolutely for free for any personal or commercial project</h3><br>
                 <button>DOWNLOAD</button>
         </div>
-        <div class="firstText">
-            <h2>Hey, is it responsive?</h2>
-            <p>No sorry, it's not. Stay tuned for future updates!There should also be WP version soon, which will totally be responsive</p>
-        </div>
-        <div class="secondText">
-            <h2>PSD Files included</h2>
-            <p>No sorry, it's not. Stay tuned for future updates! There should also be WP version soon, which will totally be responsive</p>
-        </div>
-        <div class="thirdText">
-            <h2>How about WordPress?</h2>
-            <p>No sorry, it's not. Stay tuned for future updates! There should also be WP version soon, which will totally be responsive</p>
+        <div class="downDiv">
+            <div class="firstText">
+                <h2>Hey, is it responsive?</h2>
+                <p>No sorry, it's not. Stay tuned for future updates!There should also be WP version soon, which will totally be responsive</p>
+            </div>
+            <div class="secondText">
+                <h2>PSD Files included</h2>
+                <p>No sorry, it's not. Stay tuned for future updates! There should also be WP version soon, which will totally be responsive</p>
+            </div>
+            <div class="thirdText">
+                <h2>How about WordPress?</h2>
+                <p>No sorry, it's not. Stay tuned for future updates! There should also be WP version soon, which will totally be responsive</p>
+            </div>
         </div>
         <footer>
-            <div class="footerText">
                 <h3>The <b>WordPress version</b> will be releasedin about 30 days</h3>
-            </div>
             <div class="forButton">
                 <button>GRAB IT HERE</button>
             </div>
