--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
@@ -6,38 +6,32 @@
         </head>
         <body>
             <header>
-	        <div class="header">
-	        <div style="margin-top:46px">
-	    
-	        <div class="nina"><strong>NINA</strong> THEME
-	        <a href="#home1"  class="home" >HOME</a>
-	        <a href="#about1" class="about">ABOUT</a>
-	        <a href=#ourWork1" class="ourWork">OUR WORK</a>
-	        <a href="#blog1" class="blog" >BLOG</a>
-	        <a href="#contact1" class="contact">CONTACT</a>
-	        </div>
-	        </div>
-	        </div>
+                <div id="ninaTheme"><strong>NINA</strong> THEME </div>
+	        <div  class="nina" >HOME</div>
+	        <div href="#about1" class="nina">ABOUT</div>
+	        <div href=#ourWork1" class="nina">OUR WORK</div>
+	        <div href="#blog1" class="nina" >BLOG</div>
+	        <div href="#contact1" class="nina">CONTACT</div>
             </header>
-	<section class="bgImage">
-	    <div class="letters"> <h1>Free Minimalistic HTML Template</h1>
-	    <p>That's right,this template is absolutly for free for any personal or commericial project</p></div> 
-	    <button class="button">DOWNLOAD</button>	    
-	</section>
-	<br></br>
-	    <div>
+            <section class="bgImage">
+                <div class="letters"> <h1>Free Minimalistic HTML Template</h1>
+                <p>That's right,this template is absolutly for free for any personal or commericial project</p></div> 
+                <button class="button">DOWNLOAD</button>	    
+            </section>
+	    <br></br>
+	    <div id="bottomDiv">
 	        <a class="article1">Hey! is it responsive?</a>
-	        <a class="article2">Looking for PSD? <a href="#here" color:#FF8C00>here</a>
-	        <a class="article3">How about Word Press?<a href="#click" color:#FF8C00>click here</a>
+	        <a class="article2">Looking for PSD? <a href="#here" class="here">here</a>
+	        <a class="article3">How about Word Press?<a href="#click" class="here">click here</a>
 	        <br></br>
-	        <br></br>
-	        <footer class="footer">
-                    <h2 class="article4">The Word Press version  
-                    <b>will be released</b> in about 30 days</h2>
-                    <button class="button2">GRAB IT HERE</button>
-                </footer>
-	    
-	    </div>
+	    <footer class="footer">
+                <h2 class="article4">The Word Press version  
+                <b>will be released</b> in about 30 days</h2>
+                <button class="button2">GRAB IT HERE</button>
+            </footer>
+	
+
+            </div>    
 	</body>
 </html>
 
