--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
@@ -9,7 +9,7 @@
                 <div id="ninaTheme"><strong>NINA</strong> THEME </div>
 	        <div  class="nina" >HOME</div>
 	        <div href="#about1" class="nina">ABOUT</div>
-	        <div href=#ourWork1" class="nina">OUR WORK</div>
+	        <div href="#ourWork1" class="nina">OUR WORK</div>
 	        <div href="#blog1" class="nina" >BLOG</div>
 	        <div href="#contact1" class="nina">CONTACT</div>
             </header>
