--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
@@ -26,7 +26,7 @@
 	        <br></br>
 	    <footer class="footer" >
                 <h2 class="article4">The Word Press version  
-                <b>will be released</b> in about 30 days</h2>
+                <br>will be released</br> in about 30 days</h2>
                 <button class="button2">GRAB IT HERE</button>
             </footer>
 	
