--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <head>
-       	    <link rel="stylesheet" href="web.css">
-        </head>
-        <body>
-            <header>
-                <div id="ninaTheme"><strong>NINA</strong> THEME </div>
-	        <div  class="nina" >HOME</div>
-	        <div href="#about1" class="nina">ABOUT</div>
-	        <div href="#ourWork1" class="nina">OUR WORK</div>
-	        <div href="#blog1" class="nina" >BLOG</div>
-	        <div href="#contact1" class="nina">CONTACT</div>
-            </header>
-            <section class="bgImage">
-                <div class="letters"> <h1>Free Minimalistic HTML Template</h1>
-                <p>That's right,this template is absolutly for free for any personal or commericial project</p></div> 
-                <button class="button">DOWNLOAD</button>	    
-            </section>
-	    <br></br>
-	    <div id="bottomDiv">
-	        <a class="article1">Hey! is it responsive?</a>
-	        <a class="article2">Looking for PSD? <a href="#here" class="here">here</a>
-	        <a class="article3">How about Word Press?<a href="#click" class="here">click here</a>
-	        <br></br>
-	    <footer class="footer" >
+    <head>
+        <link rel="stylesheet" href="web.css">
+    </head>
+    <body>
+        <header>
+            <div id="ninaTheme"><strong>NINA</strong> THEME </div>
+            <div  class="nina" >HOME</div>
+            <div href="#about1" class="nina">ABOUT</div>
+            <div href="#ourWork1" class="nina">OUR WORK</div>
+            <div href="#blog1" class="nina" >BLOG</div>
+            <div href="#contact1" class="nina">CONTACT</div>
+        </header>
+        <section class="bgImage">
+            <div class="letters">
+                <h1>Free Minimalistic HTML Template</h1>
+                <p>That's right,this template is absolutly for free for any personal or commericial project</p>
+            </div>
+            <button class="button">DOWNLOAD</button>	    
+        </section>
+        <br></br>
+        <div id="bottomDiv">
+            <a class="article1">Hey! is it responsive?</a>
+            <a class="article2">Looking for PSD? <a href="#here" class="here">here</a>
+            <a class="article3">How about Word Press?<a href="#click" class="here">click here</a>
+            <br></br>
+            <footer class="footer" >
                 <h2 class="article4">The Word Press version  
-                <br>will be released</br> in about 30 days</h2>
+                    <br>will be released</br> in about 30 days
+                </h2>
                 <button class="button2">GRAB IT HERE</button>
             </footer>
-	
-
-            </div>    
-	</body>
+        </div>
+    </body>
 </html>
+
 
