--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.html
@@ -28,7 +28,7 @@
             <br></br>
             <footer class="footer" >
                 <h2 class="article4">The Word Press version  
-                    <br>will be released</br> in about 30 days
+                    will be released</br> in about 30 days
                 </h2>
                 <button class="button2">GRAB IT HERE</button>
             </footer>
