--- a/Anahit_Karyan/Homeworks/Web/Html_Css/2-19.06.2018/login.html
+++ b/Anahit_Karyan/Homeworks/Web/Html_Css/2-19.06.2018/login.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 <title> Login </title>
+<link rel="stylesheet" href="login.css">
 </head>
 
 <body>
 
 <form>
 
-    <p> Login
-    <input type="text" placeholder="Enter Login"> </input></p> 
-    <p> Password
-    <input type="password" placeholder="Enter Password"</input> </p>
-    <p> <button type="submit">Login</button> </p>
-    <p> <input type="checkbox" checked="checked" > Remember me </input> </p>
+     Login  
+    <input class="c1" type="text" placeholder="Enter Login"> </input> <br/><br/>
+    Password
+    <input class="c1" type="password" placeholder="Enter Password"</input> <br/><br/>   
 
-</form> 
+    <button type="submit"> Login </button> <br/>
+    <input type="checkbox" checked="checked" > Remember me </input> 
+
+</form>
 </body>
