--- a/Anahit_Karyan/Homeworks/Web/Html_Css/2-19.06.2018/radio.html
+++ b/Anahit_Karyan/Homeworks/Web/Html_Css/2-19.06.2018/radio.html
@@ -5,21 +5,21 @@
 
 
 function hide(){
-var rad=document.getElementsByName('r');
-for (var i=0;i&lt;rad.length; i++) {
+	var rad=document.getElementsByName('r');
+        for (var i=0;i<rad.length; i++) {
         if (rad[i].checked) {
-        var elem = document.getElementByValue('rad[i]');
-        document.getElementById(elem).setAttribute("style","opacity: 0");    
-     }
+	var el=rad[i].value;
+        document.getElementById(el).setAttribute("style","opacity: 0"); 
+	}
+    }
 }
 
 function show(){
-var rad=document.getElementsByName('r');
-for (var i=0;i&lt;rad.length; i++) {
+        var rad=document.getElementsByName('r');
+        for (var i=0;i<rad.length; i++) {
         if (rad[i].checked) {
-        var elem = document.getElementByValue('rad[i]');
-        . elem{
-              opacity:1;
+        var el=rad[i].value;
+        document.getElementById(el).setAttribute("style","opacity: 1"); 
         }
     }
 }
@@ -41,8 +41,8 @@ for (var i=0;i&lt;rad.length; i++) {
 <p>3<input type="radio" value="div3" name=r> div3 </input></p>
 <p>4<input type="radio" value="div4" name=r> div4 </input></p>
 <p>5<input type="radio" value="div5" name=r> div5 </input></p>
+</div>
 
-</form>
 <button onclick="show()"> show </button>
 <button onclick="hide()"> hide </button>
 
