--- a/Mher_Melqonyan/Homeworks/HTML/20.06/20.06/page.html
+++ b/Mher_Melqonyan/Homeworks/HTML/20.06/20.06/page.html
@@ -7,7 +7,7 @@
 <div class="mainDiv">
 		<header>
 			<div class="header">
-				<div><button class="firB"><span class="nina">Nina</span><span class="theme">Theme</span></button>
+				<div class="divbutt"><button class="firB"><span class="nina">Nina</span><span class="theme">Theme</span></button>
 					<button class="secB"><span class="other">Home</span></button>
 					<button class="thB"><span class="other">About</span></button>
 					<button class="fouB"><span class="other">Our Work</span></button>
