--- a/Anush_Ghazaryan/Homeworks/HTML/2_19.06/login.html
+++ b/Anush_Ghazaryan/Homeworks/HTML/2_19.06/login.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+     <script>
+	.uname{
+	    position 
+
+	}
+    </script>
     <body>
 	<label>
 	    <form action="somewhere.com">
 
                 <h1><span style = "color: blue;font-weight:bold">Login Form</h1>
-	        <head><div>Username</div></head>
+	        <div class = "uname">Username</div>
 	        <input type="text" placeholder="Enter Username" name="username" required>
-	        <head><div>Password</div></head>
+	        <div class = "pas">Password</div>
 	        <input type="password" placeholder="Enter Password" name="password" required>
 	        <br>
 	        <button type="login">Login</button>
