Lotto corrected cards bugs

--- a/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/index.html
+++ b/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Astghik_Loto</title>
+        <title>Astghik_Lotto</title>
         <link rel="stylesheet" href="./style.css">
         <script src="./script.js" defer></script>
         <noscript>Your browser does not support JavaScript!</noscript>
@@ -21,10 +21,13 @@
             </div>
         </header>
         <section id="cardOne" class="container">
+            <input type="Mari" placeholder="Mari">
         </section>
         <section id="cardTwo" class="container">
+                <input type="Lina" placeholder="Lina">
         </section>
         <section id="cardThree" class="container">
+                <input type="Astghik" placeholder="Astghik">
         </section>
         <section id="stack">
         </section>   
