in progres loto

--- a/Karen_Vardumyan/Homeworks/Javascript/02_29.08.2018/index.html
+++ b/Karen_Vardumyan/Homeworks/Javascript/02_29.08.2018/index.html
@@ -9,26 +9,26 @@
 </head>
 <body>
 
-    <header id="header">
-        <h1 id="h1"> Loto </h1>
-        <button id="btnStart" class="button" onclick="foo()"> Start </button>
-        <button id="btnSteep" class="button" onclick="steep()"> Steep </button>
-        <button id="change"   class="button" onclick="changeColor()"> change </button>
+<header id="header">
+    <h1 id="h1"> Loto </h1>
+    <button id="btnStart" class="button" onclick="foo()"> Start </button>
+    <button id="btnSteep" class="button" onclick="creatnumbers()"> Get Stones </button>
+    <button id="change"   class="button" onclick="openNumbers()"> Open </button>
 
-    </header>
+</header>
 
-    <div id="num">
-        <table id="numbers"></table>
-    </div>
-
-
-    <div id="content">
-        <table id="ticket1" class="ticket"></table>
-        <table id="ticket2" class="ticket"></table>
-        <table id="ticket3" class="ticket"></table>
-    </div>
+<div id="num">
+    <table id="numbers"></table>
+</div>
 
 
-    <script src="./script.js" defer></script>
+<div id="content">
+    <table id="ticket1" class="ticket"></table>
+    <table id="ticket2" class="ticket"></table>
+    <table id="ticket3" class="ticket"></table>
+</div>
+
+
+<script src="./script.js" defer></script>
 </body>
 </html>
