--- a/Anush_Ghazaryan/Homeworks/JavaScript/3_30.08/Lottory/index.html
+++ b/Anush_Ghazaryan/Homeworks/JavaScript/3_30.08/Lottory/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <header id="buttons">
-    <button id="playersBtn" class="button" onclick="foo()"> PLAYERS </button>
-    <button id="btnSteep" class="button" onclick="creatnumbers()"> START GAME </button>
+    <button id="playersBtn" class="button" onclick="ticketFunc()"> PLAYERS </button>
+    <button id="btnSteep" class="button" onclick="getnumbers()"> START GAME </button>
     <button id="change"   class="button" onclick="openNumbers()">GET STONES</button>
 
 </header>
