update CookMaster web UI

--- a/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb/index.html
+++ b/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb/index.html
@@ -25,20 +25,24 @@
         <aside class="left">
             <div class="defStatus">DEFAULT STATUS</div>
             <div class="from">From</div>
-            <div class="date">0ghn1</div>
-            <div class="date">0hgn1</div>
-            <div class="date">0ghn1</div>
-            <div class="to">to</div>
-            <div class="date">0ghn1</div>
-            <div class="date">0ng1</div>
-            <div class="date">0ghn1</div>
+            <div class="dateFromDay">01</div>
+            <div class="dateFromMonth">01</div>
+            <div class="dateFromYear">2013</div>
+            <div class="to">To</div>
+            <div class="dateToDay">01</div>
+            <div class="dateToMonth">01</div>
+            <div class="dateToYear">2013</div>
             <div class="status">Status</div>
-            <div class="circle">circle</div>
-            <div class="btn">btn</div>
+            <div class="circle">
+                <img style="width: 100%" src="css/images/toggle.png">
+            </div>
+            <div class="btn">
+                <button id="button">Accept</button>
+            </div>
 
         </aside>
+
         <aside class="right">Menu2</aside>
-        <footer class="footer">Footer</footer>
     </div>
 
 </body>
