update slide page

--- a/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_slide/index.html
+++ b/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_slide/index.html
@@ -21,7 +21,9 @@
         </header>
         
         <main class="main">
+            <div class="up"></div>
             <div class="text">WELCOME TO OUR KITCHEN</div>
+            <div class="down"></div>
         </main>
     </div>
 
