--- a/Anush_Ghazaryan/Homeworks/JavaScript/2_29.08/previewPage/preview.html
+++ b/Anush_Ghazaryan/Homeworks/JavaScript/2_29.08/previewPage/preview.html
@@ -10,23 +10,58 @@
 
 <div class="slideshow-container">
 
-<div class="mySlides fade">
-  
+
+
+  <div class="mySlides fade">
   <img src="background.jpg" style="width:100%">
-  <div class="text">Hello, this is a quick <br/>overview of Grapes Application</div>
+  <div class="text">Hello, this is a quick <br/><br/>overview of Grapes Application
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <input  class="nickname" type="password" placeholder="Nickname" name="uname" required>
+  <br/>
+  <br/>
+  <section><button class="button" type="submit">SUBMIT</button></section>
+</div>
 </div>
 
 <div class="mySlides fade">
   
   <img src="background.jpg" style="width:100%">
-  <div class="text">Grapes is a peer-to-peer technology based project, <br/> that allows people of large communities share their files <br/> instantly for a long-term savings</div>
+  <div class="text">Grapes is a peer-to-peer technology based project, <br/><br/> that allows people of large communities share their files <br/><br/> instantly for a long-term savings
+    <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <input  class="nickname" type="password" placeholder="Nickname" name="uname" required>
+  <br/>
+  <br/>
+  <section><button class="button" type="submit">SUBMIT</button></section>
+</div>
 </div>
 
 <div class="mySlides fade">
  
   <img src="background.jpg" style="width:100%">
-  <div class="text">Grapes is a file sharing, uploading and downloading <br/> tool without centeralized file storage</div>
-</div>
+  <div class="text">Grapes is a file sharing, uploading and downloading <br/><br/> tool without centeralized file storage
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <input  class="nickname" type="password" placeholder="Nickname" name="uname" required>
+    <br/>
+    <br/>
+    <section><button class="button" type="submit">SUBMIT</button></section>
+  </div>
+  </div>
+  </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
