--- a/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_login/index.html
+++ b/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_login/index.html
@@ -13,23 +13,17 @@
 <body>
     <div class="container">
         <main class="main">
-            <div class="noLogo"></div>
             <div class="logo">
                <img src="images/logo.png" alt="CookMaster">
             </div>
-            <div class="noLogo"></div>
-            <div class="noSignIn"></div>
             <div class="signIn">Sign In</div>
-            <div class="noSignIn"></div>
             <div class="emailAddress">Email Address</div>
             <div class="inputEmail">
-                <input type="text" name="email"><br>
-                <hr>
+                <input type="text" name="email"><hr>
             </div>
             <div class="password">Password</div>
             <div class="inputPassword">
-                <input type="text" name="password"><br>
-                <hr>
+                <input type="text" name="password"><hr>
             </div>
             <div class="rememberMe">
                 <input type="checkbox" checked name="rememberMe" > Remember me
